--- a/src/index.less
+++ b/src/index.less
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'zcool-font';
-    src: url('./font/zcool-gdh_Regular.ttf');
+    src: url('public/assets/font/zcool-gdh_Regular.ttf');
 }
 
 body {
